{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 324,
  "lineage": "52fd562d-5da3-edd5-a92d-7690cd7ff79d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Bastion_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d33cd55ca30f59c1",
            "arn": "arn:aws:ec2:us-east-2:084375573732:elastic-ip/eipalloc-0d33cd55ca30f59c1",
            "association_id": "eipassoc-06453b690fb864bf2",
            "domain": "vpc",
            "id": "eipalloc-0d33cd55ca30f59c1",
            "instance": "i-09d5cff6e403fe294",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ea73922343351c90",
            "private_dns": "ip-10-22-0-225.us-east-2.compute.internal",
            "private_ip": "10.22.0.225",
            "public_dns": "ec2-3-14-199-247.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.199.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.Wazuh_Instance_Profile",
            "aws_iam_role.Wazuh_S3_Access",
            "aws_instance.Bastion_EC2",
            "aws_security_group.Bastion_SG",
            "aws_security_group.Wazuh_SG",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP_Wazuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049fd93fae4f8522c",
            "arn": "arn:aws:ec2:us-east-2:084375573732:elastic-ip/eipalloc-049fd93fae4f8522c",
            "association_id": "eipassoc-04e39f69a1ce537f4",
            "domain": "vpc",
            "id": "eipalloc-049fd93fae4f8522c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0de5edc77cecd59d2",
            "private_dns": "ip-10-22-0-215.us-east-2.compute.internal",
            "private_ip": "10.22.0.215",
            "public_dns": "ec2-3-147-92-49.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.92.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:084375573732:instance/i-09d5cff6e403fe294",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Wazuh_Instance_Profile",
            "id": "i-09d5cff6e403fe294",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wazuh_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea73922343351c90",
            "private_dns": "ip-10-22-0-225.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.22.0.225",
            "public_dns": "ec2-52-15-225-202.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.225.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d89e0d49d2c4f5a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bc166480a454253c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a4e28b8eb1d7204",
            "tags": {
              "Name": "Bastion_EC2"
            },
            "tags_all": {
              "Name": "Bastion_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc166480a454253c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Wazuh_Instance_Profile",
            "aws_iam_role.Wazuh_S3_Access",
            "aws_security_group.Bastion_SG",
            "aws_security_group.Wazuh_SG",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wazuh_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:084375573732:instance/i-0b4b52643b76a6281",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Wazuh_Instance_Profile",
            "id": "i-0b4b52643b76a6281",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wazuh_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a43c1036b86a8b17",
            "private_dns": "ip-10-22-0-87.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.22.0.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f7acfffb075eccc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-018543fc532c67f7d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a20a4dcc35ab388",
            "tags": {
              "Name": "Wazuh_EC2"
            },
            "tags_all": {
              "Name": "Wazuh_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018543fc532c67f7d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Wazuh_Instance_Profile",
            "aws_iam_role.Wazuh_S3_Access",
            "aws_security_group.Wazuh_SG",
            "aws_subnet.Private_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Wazuh_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:internet-gateway/igw-07c211d034d494b8b",
            "id": "igw-07c211d034d494b8b",
            "owner_id": "084375573732",
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "dependencies": [
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Wazuh_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049fd93fae4f8522c",
            "association_id": "eipassoc-04e39f69a1ce537f4",
            "connectivity_type": "public",
            "id": "nat-04203cbd066877d40",
            "network_interface_id": "eni-0de5edc77cecd59d2",
            "private_ip": "10.22.0.215",
            "public_ip": "3.147.92.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a4e28b8eb1d7204"
          },
          "dependencies": [
            "aws_eip.NAT_EIP_Wazuh",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:route-table/rtb-04b17a47ede296b09",
            "id": "rtb-04b17a47ede296b09",
            "owner_id": "084375573732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04203cbd066877d40",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP_Wazuh",
            "aws_nat_gateway.Wazuh_NAT",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Subnet_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:route-table/rtb-03127f734cfe2afcd",
            "id": "rtb-03127f734cfe2afcd",
            "owner_id": "084375573732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c211d034d494b8b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Wazuh_IGW",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_Route_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0251c9cba0f585f2f",
            "route_table_id": "rtb-04b17a47ede296b09",
            "subnet_id": "subnet-04a20a4dcc35ab388"
          },
          "dependencies": [
            "aws_eip.NAT_EIP_Wazuh",
            "aws_nat_gateway.Wazuh_NAT",
            "aws_route_table.Private_Route_Table",
            "aws_subnet.Private_Subnet",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_Route_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07927a91eddc46ea8",
            "route_table_id": "rtb-03127f734cfe2afcd",
            "subnet_id": "subnet-03a4e28b8eb1d7204"
          },
          "dependencies": [
            "aws_internet_gateway.Wazuh_IGW",
            "aws_route_table.Public_Subnet_Route_Table",
            "aws_subnet.Public_Subnet",
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:security-group/sg-0bc166480a454253c",
            "description": "Security Group for Bastion (jump host), allowing specific IP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc166480a454253c",
            "ingress": [
              {
                "cidr_blocks": [
                  "75.83.236.14/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion_SG",
            "name_prefix": "",
            "owner_id": "084375573732",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Wazuh_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:security-group/sg-018543fc532c67f7d",
            "description": "Security Group for Wazuh, allowing specific IP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018543fc532c67f7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.22.0.0/25"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.22.0.0/25"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.22.0.0/25"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wazuh_SG",
            "name_prefix": "",
            "owner_id": "084375573732",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:subnet/subnet-04a20a4dcc35ab388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.22.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a20a4dcc35ab388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084375573732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "dependencies": [
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:subnet/subnet-03a4e28b8eb1d7204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.22.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a4e28b8eb1d7204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "084375573732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f7b35e08921c7e66"
          },
          "dependencies": [
            "aws_vpc.Wazuh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Wazuh_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:084375573732:vpc/vpc-0f7b35e08921c7e66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.22.0.0/24",
            "default_network_acl_id": "acl-07f972779a6989445",
            "default_route_table_id": "rtb-0211a3cfb2402986b",
            "default_security_group_id": "sg-06e3e68a8bd417527",
            "dhcp_options_id": "dopt-076862098f5674e3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7b35e08921c7e66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0211a3cfb2402986b",
            "owner_id": "084375573732"
          }
        }
      ]
    }
  ]
}